# aoc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
2015/01/: Cargo.toml
2015/01/src/: 01.rs
2015/02/: Cargo.toml
2015/03/: Cargo.toml
2015/04/: Cargo.toml
2015/05/: Cargo.toml
2015/06/: Cargo.toml
2015/07/: Cargo.toml
2015/08/: Cargo.toml
2016/01/: Cargo.toml
2016/02/: Cargo.toml
2016/03/: Cargo.toml
2016/04/: Cargo.toml
2016/05/: Cargo.toml
2017/01/: Cargo.toml
2017/02/: Cargo.toml
2017/03/: Cargo.toml
2017/04/: Cargo.toml
2017/05/: Cargo.toml
2017/06/: Cargo.toml
2017/07/: Cargo.toml
2019/01/: Cargo.toml
2019/02/: Cargo.toml
2019/03/: Cargo.toml
2019/04/: Cargo.toml
2019/05/: Cargo.toml
2019/06/: Cargo.toml  graph.dot
2019/07/: Cargo.toml
2019/08/: Cargo.toml
2019/09/: Cargo.toml
2019/10/: Cargo.toml
2019/11/: Cargo.toml
2019/12/: Cargo.toml
2019/intcode/: Cargo.toml
2022/01/: Cargo.toml
2022/02/: Cargo.toml
2022/15/: Cargo.toml
2023/01/: Cargo.toml
2023/02/: Cargo.toml
2023/03/: Cargo.toml
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2023/07/: Cargo.toml
2023/08/: Cargo.toml
2023/09/: Cargo.toml
2023/10/: .gitignore  Cargo.toml
2023/11/: Cargo.toml
2023/12/: Cargo.toml
2023/13/: Cargo.toml
2023/14/: Cargo.toml
2023/15/: Cargo.toml
2023/16/: Cargo.toml
2023/17/: Cargo.toml
2023/18/: Cargo.toml
2023/19/: Cargo.toml
2023/19/src/: 19.rs
2023/20/: Cargo.toml
2023/21/: Cargo.toml
2023/21/src/: 21.rs
2023/22/: Cargo.toml
2023/23/: Cargo.toml
string-to-index/: Cargo.toml
string-to-index/src/: lib.rs
value-to-index/: Cargo.toml
value-to-index/src/: lib.rs
(+56 files in other folders)
