[workspace]
members = ["2015/01", "2015/02", "2015/03", "2015/04", "2015/05", "2015/06", "2022/01", "2022/02", "2022/15", "2023/01", "2023/02", "2023/03", "2017/01", "2017/02", "2017/03", "2023/04", "2017/04", "2017/05", "2017/06", "2017/07", "2015/07", "2015/08", "2023/05", "2016/01", "2016/02", "2016/03", "2016/04", "2016/05"]
resolver = "2"
