[package]
name = "y2023d19"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "y2023d19"
path = "src/19.rs"

[dependencies]
aoclib = { git = "https://github.com/BlockOG/aoclib" }
indexmap = "2.1.0"
parse-display = "0.8.2"
rustc-hash = "1.1.0"
value-to-index = { version = "0.1.0", path = "../../value-to-index" }
